# GameByte

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
scripts/: count_opcodes.py
src/: main.cpp
src/core/: cpu.cpp  cpu.h  joypad.cpp  joypad.h  mmu.cpp  mmu.h  ppu.cpp  ppu.h  rom.cpp  rom.h
